--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
+    "react-icons": "^4.6.0",
+    "react-modal": "^3.15.1",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
