--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.8",
+    "@hookform/resolvers": "^2.9.9",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.2",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.36.1",
+    "react-hook-form": "^7.38.0",
     "react-icons": "^4.6.0",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
+    "typescript": "^4.8.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/react": "^18.0.17",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "vite": "^3.1.0"
